# Image_gen_chatbot

./: Makefile  app.py  main.py  pyproject.toml  requirements.txt
advisor_ch/: app.py  charts.py  config.py  nlp.py  ollama_fallback.py
advisor_chat/: app.py  data_source.py
codes/: app.py  charts.py  data_source.py  nlp.py
tests/: test_data.py  test_nlp.py
tests/fixtures/: sample.csv
